<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/LayoutPADRE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LayoutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#341144"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Bienvenida"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="#1a3a3a"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/LayoutBodyDescripcion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#4fdfaaff"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TitleDescripcion"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/Descripcion"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutBodyInstrucciones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#4fdfaaff"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TitleInstrucciones"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/Instrucciones"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutBodyZonaBotones2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#4fdfaaff"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/LayoutBodyBotonAbout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#4fdfaaff"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Lanza actividad Explicita pasando parametros. Escribe tu nombre" />

                        <!-- Dummy item to prevent EditTextNombre from receiving focus -->

                        <LinearLayout
                            android:layout_width="0px"
                            android:layout_height="0px"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <EditText
                            android:id="@+id/EditTextParam1Nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="Perico el de los Palotes"
                            android:inputType="textCapWords" />

                        <Button
                            android:id="@+id/BotonLanzarActividad3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="6dp"
                            android:onClick="llamarIntent"
                            android:text="@string/BotonLanzaActivity3" >
                        </Button>

                        <TextView
                            android:id="@+id/TextViewInformativoAboutYou"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:id="@+id/LayoutBodyBoton2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#4fdfaaff"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Lanza actividad Implicita pasando parametros. Escribe una URL" />

                        <EditText
                            android:id="@+id/EditTextParam2Url"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="www.google.es" />

                        <Button
                            android:id="@+id/BotonLanzarActividad4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="6dp"
                            android:onClick="llamarIntent"
                            android:text="@string/BotonLanzaActivity4" >
                        </Button>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutFoot"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>